--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@types/node": "18.13.0",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "clipboard": "^2.0.11",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "framer-motion": "^10.12.16",
     "next": "13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-photoswipe-gallery": "^2.2.7",
     "typescript": "4.9.5"
   },
   "devDependencies": {
